--- a/index.html
+++ b/index.html
@@ -5,8 +5,161 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
+  	<header>
+   		<nav>
+  			<a href="index.html">
+  				<img src="https://via.placeholder.com/154x64" alt="Логотип магазина мороженого «Gllacy Shop»">
+  			</a>
+  			<ul>
+  				<li><a href="#">Каталог</a>
+  					<ul>
+	  					<li><a href="#">Новинки</a></li>
+	  					<li><a href="#">Сливочное</a></li>
+	  					<li><a href="#">Щербеты</a></li>
+	  					<li><a href="#">Фруктовый лед</a></li>
+	  					<li><a href="#">Мелорин</a></li>
+	  				</ul>
+  				</li>
+  				<li><a href="#">Доставка и оплата</a></li>
+  				<li><a href="#">О компании</a></li>
+  			</ul>
+  			<a href="#">Поиск</a>
+  			<a href="#">Вход</a>
+  			<a href="#">Пусто</a>
+  		</nav>
+  	</header>
+  	<main>
+  		<h1>Магазин мороженого Gllacy Shop</h1>
+  		<p>
+  			c 10 до 20, ежедневно <br>
+  			<a href="tel:8124502525"> 8 812 450-25-25 </a>
+  		</p>
+  		<h2>Шоколадный пломбир и лимонный сорбет</h2>
+  		<figure>
+  			<a href="#"><img src="https://via.placeholder.com/683x584" alt="Шоколадный пломбир и лимонный сорбет"></a>
+  		</figure>
+  		<h2>Пломбир с помадкой и клубничный щербет</h2>
+  		<figure>
+  			<a href="#"><img src="https://via.placeholder.com/683x584" alt="Пломбир с помадкой и клубничный щербет"></a>
+  		</figure>
+  		<h2>Крем-брюле и пломбир с малиновым джемом</h2>
+  		<figure>
+  			<a href="#"><img src="https://via.placeholder.com/683x584" alt="Крем-брюле и пломбир с малиновым джемом"></a>
+  		</figure>
+  		<a href="#">Давайте оба!</a>
+  		<article>
+  			<h3>Малинка даром!</h3>
+  			<p>При покупке любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+  			<a href="#">Хочу варенье!</a>
+  		</article>
+  		<article>
+  			<h3>Шоколадки даром!</h3>
+  			<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+  			<a href="#">Хочу шоколадки!</a>
+  		</article>
+  		<section>
+  			<h2>Популярные вкусы</h2>
+  			<ul>
+  				<li>
+  					<a href="#">
+  						<img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+  						<p>310 р/кг</p>
+  						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+  					</a>
+  				</li>
+  				<li>
+  					<a href="#">
+  						<img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное с кусочками шоколада">
+  						<p>380 р/кг</p>
+  						<p>Сливочно-кофейное с кусочками шоколада</p>
+  					</a>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+  				</li>
+  				<li>
+  					<a href="#">
+  						<img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+  						<p>355 р/кг</p>
+  						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+  					</a>
+  				</li>
+  				<li>
+  					<a href="#">
+  						<img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле с карамельной подливкой">
+  						<p>415 р/кг</p>
+  						<p>Сливочное крем-брюле с карамельной подливкой</p>
+  					</a>
+  				</li>
+  			</ul>
+  		</section>
+  		<section>
+  			<b>Магазин Глэйси - это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</b>
+  			<h2>Наши преимущества</h2>
+  			<ul>
+  				<li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+  				<li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+  				<li>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+  				<li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+  			</ul>
+  		</section>
+  		<article>
+  			<p>Новое в нашем блоге</p>
+  			<h2><a href="#">10 способов сервировки фруктовых щербетов к столу</a></h2>
+  		</article>
+  		<section>
+  			<h2>Подписаться на рассылку</h2>
+  			<p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+  			<button>Отправить</button>
+  		</section>
+  		<section>
+  			<h2>Карта сайта</h2>
+  			<img src="https://via.placeholder.com/1200x430" alt="Карта сайта">
+  			<aside>
+  				<h3>Как нас найти</h3>
+  				<p>Адрес главного офиса и офлайн-магазина:<br>
+  				<b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
+  				<p>
+  					Для заказов по телефону:<br>
+  					<a href="tel:8124502525"> 8 812 450-25-25 </a><br>
+  					(c 10 до 20 ежедневно)
+  					<button>Форма обратной связи</button>
+  				</p>
+  			</aside>
+  			<!--Здесь будет карта сайта-->
+  		</section>
+  	</main>
+
+  	<footer>
+  		<section>
+  			<h2>Социальные сети</h2>
+  			<ul>
+  				<li>
+  					<a href="#">Фейсбук</a>
+  				</li>
+  				<li>
+  					<a href="#">Вконтакте</a>
+  				</li>
+  				<li>
+  					<a href="#">Инстаграм</a>
+  				</li>
+  				<li>
+  					<a href="#">Твиттер</a>
+  				</li>
+  			</ul>
+  		</section>
+  		<section>
+  			<h3>Дополнительная информация</h3>
+  			<a href="#">Для поставщиков</a>
+  			<a href="#">Наши документы</a>
+  			<a href="#">О производстве</a>
+  			<a href="#">Экологические стандарты</a>
+  		</section>
+  		<p>
+  			<img src="https://via.placeholder.com/108x39" width="108" height="39" alt="HTML Academy">
+  			Сделано в <a href="https://htmlacademy.ru"> HTML Academy </a> © 2019
+  		</p>
+  	</footer>
+
 
   </body>
 </html>
