Базовая разметка главной страницы с учетом замечаний

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <body>
   	<header>
    		<nav>
-  			<a href="index.html">
   				<img src="https://via.placeholder.com/154x64" alt="Логотип магазина мороженого «Gllacy Shop»">
-  			</a>
   			<ul>
   				<li><a href="#">Каталог</a>
   					<ul>
@@ -27,25 +25,24 @@
   			<a href="#">Вход</a>
   			<a href="#">Пусто</a>
   		</nav>
+  	
+  		<h1>Магазин мороженого Gllacy Shop</h1>
+  		<p>c 10 до 20, ежедневно</p>
+  		<a href="tel:8124502525"> 8 812 450-25-25 </a>
   	</header>
   	<main>
-  		<h1>Магазин мороженого Gllacy Shop</h1>
-  		<p>
-  			c 10 до 20, ежедневно <br>
-  			<a href="tel:8124502525"> 8 812 450-25-25 </a>
-  		</p>
-  		<h2>Шоколадный пломбир и лимонный сорбет</h2>
-  		<figure>
-  			<a href="#"><img src="https://via.placeholder.com/683x584" alt="Шоколадный пломбир и лимонный сорбет"></a>
-  		</figure>
-  		<h2>Пломбир с помадкой и клубничный щербет</h2>
-  		<figure>
-  			<a href="#"><img src="https://via.placeholder.com/683x584" alt="Пломбир с помадкой и клубничный щербет"></a>
-  		</figure>
-  		<h2>Крем-брюле и пломбир с малиновым джемом</h2>
-  		<figure>
-  			<a href="#"><img src="https://via.placeholder.com/683x584" alt="Крем-брюле и пломбир с малиновым джемом"></a>
-  		</figure>
+  		<div>
+	  		<h2>Шоколадный пломбир и лимонный сорбет</h2>
+	  		<img src="https://via.placeholder.com/683x584" alt="Шоколадный пломбир и лимонный сорбет">
+  		</div>
+  		<div>
+	  		<h2>Пломбир с помадкой и клубничный щербет</h2>
+	  		<img src="https://via.placeholder.com/683x584" alt="Пломбир с помадкой и клубничный щербет">
+  		</div>
+  		<div>
+	  		<h2>Крем-брюле и пломбир с малиновым джемом</h2>
+	  		<img src="https://via.placeholder.com/683x584" alt="Крем-брюле и пломбир с малиновым джемом">
+  		</div>
   		<a href="#">Давайте оба!</a>
   		<article>
   			<h3>Малинка даром!</h3>
@@ -61,40 +58,41 @@
   			<h2>Популярные вкусы</h2>
   			<ul>
   				<li>
-  					<a href="#">
+  					<div>
   						<img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
   						<p>310 р/кг</p>
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-  					</a>
+  						<button type="button">Быстрый просмотр</button>
+  					</div>
   				</li>
   				<li>
-  					<a href="#">
+  					<div>
   						<img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное с кусочками шоколада">
   						<p>380 р/кг</p>
   						<p>Сливочно-кофейное с кусочками шоколада</p>
-  					</a>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+  						<button type="button">Быстрый просмотр</button>
+  					</div>
   				</li>
   				<li>
-  					<a href="#">
+  					<div>
   						<img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
   						<p>355 р/кг</p>
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-  					</a>
+  						<button type="button">Быстрый просмотр</button>
+  					</div>
   				</li>
   				<li>
-  					<a href="#">
+  					<div>
   						<img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле с карамельной подливкой">
   						<p>415 р/кг</p>
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
-  					</a>
+  						<button type="button">Быстрый просмотр</button>
+  					</div>
   				</li>
   			</ul>
   		</section>
   		<section>
-  			<b>Магазин Глэйси - это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</b>
-  			<h2>Наши преимущества</h2>
+  			<h2>Магазин Глэйси - это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
   			<ul>
   				<li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
   				<li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
@@ -112,18 +110,16 @@
   			<button>Отправить</button>
   		</section>
   		<section>
-  			<h2>Карта сайта</h2>
+  			<h2>Мы на карте</h2>
   			<img src="https://via.placeholder.com/1200x430" alt="Карта сайта">
   			<aside>
   				<h3>Как нас найти</h3>
-  				<p>Адрес главного офиса и офлайн-магазина:<br>
-  				<b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
-  				<p>
-  					Для заказов по телефону:<br>
-  					<a href="tel:8124502525"> 8 812 450-25-25 </a><br>
-  					(c 10 до 20 ежедневно)
-  					<button>Форма обратной связи</button>
-  				</p>
+  				<p>Адрес главного офиса и офлайн-магазина:</p>
+  				<p><b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
+  				<p>Для заказов по телефону:</p>
+  				<a href="tel:8124502525"> 8 812 450-25-25 </a>
+  				<p>(c 10 до 20 ежедневно)</p>
+  				<button type="button">Форма обратной связи</button>
   			</aside>
   			<!--Здесь будет карта сайта-->
   		</section>
@@ -154,10 +150,8 @@
   			<a href="#">О производстве</a>
   			<a href="#">Экологические стандарты</a>
   		</section>
-  		<p>
-  			<img src="https://via.placeholder.com/108x39" width="108" height="39" alt="HTML Academy">
-  			Сделано в <a href="https://htmlacademy.ru"> HTML Academy </a> © 2019
-  		</p>
+  			<a href="#"><img src="https://via.placeholder.com/108x39" width="108" height="39" alt="HTML Academy"></a>
+  			<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
   	</footer>
 
 
