Базовая разметка главной с учетом замечаний2

--- a/index.html
+++ b/index.html
@@ -58,36 +58,36 @@
   			<h2>Популярные вкусы</h2>
   			<ul>
   				<li>
-  					<div>
+  					<section>
   						<img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
   						<p>310 р/кг</p>
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   						<button type="button">Быстрый просмотр</button>
-  					</div>
+  					</section>
   				</li>
   				<li>
-  					<div>
+  					<section>
   						<img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное с кусочками шоколада">
   						<p>380 р/кг</p>
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   						<button type="button">Быстрый просмотр</button>
-  					</div>
+  					</section>
   				</li>
   				<li>
-  					<div>
+  					<section>
   						<img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
   						<p>355 р/кг</p>
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   						<button type="button">Быстрый просмотр</button>
-  					</div>
+  					</section>
   				</li>
   				<li>
-  					<div>
+  					<section>
   						<img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле с карамельной подливкой">
   						<p>415 р/кг</p>
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   						<button type="button">Быстрый просмотр</button>
-  					</div>
+  					</section>
   				</li>
   			</ul>
   		</section>
