--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
   </head>
-  <body>
-  	<header>
-   		<nav>
+  <body class="page-body">
+  	<header class="main-header">
+   		<nav class="main-navigation">
   				<img src="https://via.placeholder.com/154x64" alt="Логотип магазина мороженого «Gllacy Shop»">
-  			<ul>
+  			<ul class="main-menu">
   				<li><a href="#">Каталог</a>
-  					<ul>
+  					<ul class="sub-menu">
 	  					<li><a href="#">Новинки</a></li>
 	  					<li><a href="#">Сливочное</a></li>
 	  					<li><a href="#">Щербеты</a></li>
@@ -21,38 +21,37 @@
   				<li><a href="#">Доставка и оплата</a></li>
   				<li><a href="#">О компании</a></li>
   			</ul>
-  			<a href="#">Поиск</a>
-  			<a href="#">Вход</a>
-  			<a href="#">Пусто</a>
+  			<a class="main-header-button search" href="#">Поиск</a>
+  			<a class="main-header-button login" href="#">Вход</a>
+  			<a class="main-header-button basket" href="#">Пусто</a>
   		</nav>
-  	
-  		<h1>Магазин мороженого Gllacy Shop</h1>
   		<p>c 10 до 20, ежедневно</p>
-  		<a href="tel:8124502525"> 8 812 450-25-25 </a>
+  		<a class="header-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
   	</header>
-  	<main>
+  	<main class="container">
+      <h1>Магазин мороженого Gllacy Shop</h1>
   		<div>
-	  		<h2>Шоколадный пломбир и лимонный сорбет</h2>
 	  		<img src="https://via.placeholder.com/683x584" alt="Шоколадный пломбир и лимонный сорбет">
+        <h2>Шоколадный пломбир и лимонный сорбет</h2>
   		</div>
   		<div>
-	  		<h2>Пломбир с помадкой и клубничный щербет</h2>
 	  		<img src="https://via.placeholder.com/683x584" alt="Пломбир с помадкой и клубничный щербет">
+        <h2>Пломбир с помадкой и клубничный щербет</h2>
   		</div>
   		<div>
-	  		<h2>Крем-брюле и пломбир с малиновым джемом</h2>
 	  		<img src="https://via.placeholder.com/683x584" alt="Крем-брюле и пломбир с малиновым джемом">
+        <h2>Крем-брюле и пломбир с малиновым джемом</h2>
   		</div>
-  		<a href="#">Давайте оба!</a>
+  		<a class="button" href="#">Давайте оба!</a>
   		<article>
   			<h3>Малинка даром!</h3>
   			<p>При покупке любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-  			<a href="#">Хочу варенье!</a>
+  			<a class="button" href="#">Хочу варенье!</a>
   		</article>
   		<article>
   			<h3>Шоколадки даром!</h3>
   			<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-  			<a href="#">Хочу шоколадки!</a>
+  			<a class="button" href="#">Хочу шоколадки!</a>
   		</article>
   		<section>
   			<h2>Популярные вкусы</h2>
@@ -62,7 +61,7 @@
   						<img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
   						<p>310 р/кг</p>
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-  						<button type="button">Быстрый просмотр</button>
+  						<button class="button" type="button">Быстрый просмотр</button>
   					</section>
   				</li>
   				<li>
@@ -70,7 +69,7 @@
   						<img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное с кусочками шоколада">
   						<p>380 р/кг</p>
   						<p>Сливочно-кофейное с кусочками шоколада</p>
-  						<button type="button">Быстрый просмотр</button>
+  						<button class="button" type="button">Быстрый просмотр</button>
   					</section>
   				</li>
   				<li>
@@ -78,7 +77,7 @@
   						<img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
   						<p>355 р/кг</p>
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-  						<button type="button">Быстрый просмотр</button>
+  						<button class=""button type="button">Быстрый просмотр</button>
   					</section>
   				</li>
   				<li>
@@ -86,18 +85,18 @@
   						<img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле с карамельной подливкой">
   						<p>415 р/кг</p>
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
-  						<button type="button">Быстрый просмотр</button>
+  						<button class="button" type="button">Быстрый просмотр</button>
   					</section>
   				</li>
   			</ul>
   		</section>
-  		<section>
+  		<section class="features">
   			<h2>Магазин Глэйси - это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-  			<ul>
-  				<li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-  				<li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
-  				<li>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
-  				<li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+  			<ul class="features-list">
+  				<li class="feature-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+  				<li class="feature-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+  				<li class="feature-item">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+  				<li class="feature-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
   			</ul>
   		</section>
   		<article>
@@ -107,49 +106,49 @@
   		<section>
   			<h2>Подписаться на рассылку</h2>
   			<p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-  			<button>Отправить</button>
+  			<button class="button">Отправить</button>
   		</section>
   		<section>
   			<h2>Мы на карте</h2>
   			<img src="https://via.placeholder.com/1200x430" alt="Карта сайта">
-  			<aside>
+  			<aside class="contacts">
   				<h3>Как нас найти</h3>
   				<p>Адрес главного офиса и офлайн-магазина:</p>
   				<p><b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
   				<p>Для заказов по телефону:</p>
-  				<a href="tel:8124502525"> 8 812 450-25-25 </a>
+  				<a class="contacts-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
   				<p>(c 10 до 20 ежедневно)</p>
-  				<button type="button">Форма обратной связи</button>
+  				<button class="button" type="button">Форма обратной связи</button>
   			</aside>
   			<!--Здесь будет карта сайта-->
   		</section>
   	</main>
 
-  	<footer>
-  		<section>
+  	<footer class="page-footer main-footer">
+  		<section class="footer-social">
   			<h2>Социальные сети</h2>
   			<ul>
   				<li>
-  					<a href="#">Фейсбук</a>
+  					<a class="social-button" href="#">Фейсбук</a>
   				</li>
   				<li>
-  					<a href="#">Вконтакте</a>
+  					<a class="social-button" href="#">Вконтакте</a>
   				</li>
   				<li>
-  					<a href="#">Инстаграм</a>
+  					<a class="social-button" href="#">Инстаграм</a>
   				</li>
   				<li>
-  					<a href="#">Твиттер</a>
+  					<a class="social-button" href="#">Твиттер</a>
   				</li>
   			</ul>
   		</section>
-  		<section>
+  		<section class="footer-info">
   			<h3>Дополнительная информация</h3>
   			<a href="#">Для поставщиков</a>
   			<a href="#">Наши документы</a>
   			<a href="#">О производстве</a>
   			<a href="#">Экологические стандарты</a>
-  		</section>
+  		</section class="footer-copyright">
   			<a href="#"><img src="https://via.placeholder.com/108x39" width="108" height="39" alt="HTML Academy"></a>
   			<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
   	</footer>
