--- a/index.html
+++ b/index.html
@@ -23,34 +23,41 @@
   				<li><a href="#">Доставка и оплата</a></li>
   				<li><a href="#">О компании</a></li>
   			</ul>
-  			<a class="main-header-button search" href="#">Поиск</a>
-  			<a class="main-header-button login" href="#">Вход</a>
-  			<a class="main-header-button basket" href="#">Пусто</a>
+        <div class="main-header-button">
+    			<a href="#">Поиск</a>
+    			<a href="#">Вход</a>
+    			<a href="#">Пусто</a>
+        </div>
   		</nav>
-  		<p>c 10 до 20, ежедневно</p>
-  		<a class="header-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
+      <div class="header-contacts">
+    		<p class="header-item">c 10 до 20, ежедневно</p>
+    		<a class="header-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
+      </div>
   	</header>
   	<main class="container">
-      <h1>Магазин мороженого Gllacy Shop</h1>
-  		<div>
-	  		<img src="https://via.placeholder.com/683x584" alt="Шоколадный пломбир и лимонный сорбет">
-        <h2>Шоколадный пломбир и лимонный сорбет</h2>
-  		</div>
-  		<div>
-	  		<img src="https://via.placeholder.com/683x584" alt="Пломбир с помадкой и клубничный щербет">
-        <h2>Пломбир с помадкой и клубничный щербет</h2>
-  		</div>
-  		<div>
-	  		<img src="https://via.placeholder.com/683x584" alt="Крем-брюле и пломбир с малиновым джемом">
-        <h2>Крем-брюле и пломбир с малиновым джемом</h2>
-  		</div>
-  		<a class="button" href="#">Давайте оба!</a>
-  		<article>
+      <div class="best-offer">
+        <h1>Магазин мороженого Gllacy Shop</h1>
+    		<div>
+  	  		<img src="https://via.placeholder.com/683x584" alt="Шоколадный пломбир и лимонный сорбет">
+          <h2>Шоколадный пломбир и лимонный сорбет</h2>
+    		</div>
+    		<div>
+  	  		<img src="https://via.placeholder.com/683x584" alt="Пломбир с помадкой и клубничный щербет">
+          <h2>Пломбир с помадкой и клубничный щербет</h2>
+    		</div>
+    		<div>
+  	  		<img src="https://via.placeholder.com/683x584" alt="Крем-брюле и пломбир с малиновым джемом">
+          <h2>Крем-брюле и пломбир с малиновым джемом</h2>
+    		</div>
+    		<a class="button best-offer-button" href="#">Давайте оба!</a>
+      </div>
+
+  		<article class="raspberry-free">
   			<h3>Малинка даром!</h3>
   			<p>При покупке любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-  			<a class="button" href="#">Хочу варенье!</a>
+  			<a class="button button-raspberry" href="#">Хочу варенье!</a>
   		</article>
-  		<article>
+  		<article class="chocolate-free">
   			<h3>Шоколадки даром!</h3>
   			<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
   			<a class="button" href="#">Хочу шоколадки!</a>
@@ -59,34 +66,34 @@
   			<h2>Популярные вкусы</h2>
   			<ul>
   				<li>
-  					<section>
+  					<section class="goods-item">
   						<img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-  						<p>310 р/кг</p>
-  						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+  						<p class="goods-item-price">310 р/кг</p>
+  						<p class="goods-item-descriotion">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   						<button class="button" type="button">Быстрый просмотр</button>
   					</section>
   				</li>
   				<li>
-  					<section>
+  					<section class="goods-item">
   						<img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное с кусочками шоколада">
-  						<p>380 р/кг</p>
-  						<p>Сливочно-кофейное с кусочками шоколада</p>
+  						<p class="goods-item-price">380 р/кг</p>
+  						<p class="goods-item-descriotion">Сливочно-кофейное с кусочками шоколада</p>
   						<button class="button" type="button">Быстрый просмотр</button>
   					</section>
   				</li>
   				<li>
-  					<section>
+  					<section class="goods-item">
   						<img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-  						<p>355 р/кг</p>
-  						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-  						<button class=""button type="button">Быстрый просмотр</button>
+  						<p class="goods-item-price">355 р/кг</p>
+  						<p class="goods-item-descriotion">Сливочно-клубничное с присыпкой из белого шоколада</p>
+  						<button class="button" type="button">Быстрый просмотр</button>
   					</section>
   				</li>
   				<li>
-  					<section>
+  					<section class="goods-item">
   						<img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле с карамельной подливкой">
-  						<p>415 р/кг</p>
-  						<p>Сливочное крем-брюле с карамельной подливкой</p>
+  						<p class="goods-item-price">415 р/кг</p>
+  						<p class="goods-item-descriotion">Сливочное крем-брюле с карамельной подливкой</p>
   						<button class="button" type="button">Быстрый просмотр</button>
   					</section>
   				</li>
@@ -101,11 +108,11 @@
   				<li class="feature-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
   			</ul>
   		</section>
-  		<article>
+  		<article class="news">
   			<p>Новое в нашем блоге</p>
   			<h2><a href="#">10 способов сервировки фруктовых щербетов к столу</a></h2>
   		</article>
-  		<section>
+  		<section class="mailing">
   			<h2>Подписаться на рассылку</h2>
   			<p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
   			<button class="button">Отправить</button>
@@ -115,11 +122,11 @@
   			<img src="https://via.placeholder.com/1200x430" alt="Карта сайта">
   			<aside class="contacts">
   				<h3>Как нас найти</h3>
-  				<p>Адрес главного офиса и офлайн-магазина:</p>
-  				<p><b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
-  				<p>Для заказов по телефону:</p>
+  				<p class="adress-name">Адрес главного офиса и офлайн-магазина:</p>
+  				<p class="address"><b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
+  				<p class="tel-name">Для заказов по телефону:</p>
   				<a class="contacts-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
-  				<p>(c 10 до 20 ежедневно)</p>
+  				<p class="opening-hours">(c 10 до 20 ежедневно)</p>
   				<button class="button" type="button">Форма обратной связи</button>
   			</aside>
   			<!--Здесь будет карта сайта-->
@@ -152,7 +159,7 @@
   			<a href="#">Экологические стандарты</a>
   		</section class="footer-copyright">
   			<a href="#"><img src="https://via.placeholder.com/108x39" width="108" height="39" alt="HTML Academy"></a>
-  			<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
+  			<p>Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
   	</footer>
 
 
