Добавление картинок. Часть 1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="page-body">
   	<header class="main-header">
    		<nav class="main-navigation">
-  				<img src="https://via.placeholder.com/154x64" alt="Логотип магазина мороженого «Gllacy Shop»">
+  				<img src="img/Logo.png" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
   			<ul class="main-menu">
   				<li><a href="#">Каталог</a>
   					<ul class="sub-menu">
@@ -37,17 +37,14 @@
   	<main class="container">
       <div class="best-offer">
         <h1>Магазин мороженого Gllacy Shop</h1>
-    		<div>
-  	  		<img src="https://via.placeholder.com/683x584" alt="Шоколадный пломбир и лимонный сорбет">
+    		<div class="ice-cream1">
+          <h2>Крем-брюле и пломбир с малиновым джемом</h2>
+    		</div>
+    		<div class="ice-cream2">
           <h2>Шоколадный пломбир и лимонный сорбет</h2>
     		</div>
-    		<div>
-  	  		<img src="https://via.placeholder.com/683x584" alt="Пломбир с помадкой и клубничный щербет">
+    		<div class="ice-cream3">
           <h2>Пломбир с помадкой и клубничный щербет</h2>
-    		</div>
-    		<div>
-  	  		<img src="https://via.placeholder.com/683x584" alt="Крем-брюле и пломбир с малиновым джемом">
-          <h2>Крем-брюле и пломбир с малиновым джемом</h2>
     		</div>
     		<a class="button best-offer-button" href="#">Давайте оба!</a>
       </div>
