--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
-  	<header class="main-header">
-   		<nav class="main-navigation">
-  				<img src="img/Logo.png" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
+    <header class="main-header">
+     <nav class="main-navigation">
+  		<img src="img/Logo.png" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
   			<ul class="main-menu">
   				<li><a href="#">Каталог</a>
-  					<ul class="sub-menu">
-	  					<li><a href="#">Новинки</a></li>
-	  					<li><a href="#">Сливочное</a></li>
-	  					<li><a href="#">Щербеты</a></li>
-	  					<li><a href="#">Фруктовый лед</a></li>
-	  					<li><a href="#">Мелорин</a></li>
+  				  <ul class="sub-menu">
+	  				<li><a href="#">Новинки</a></li>
+	  				 <li><a href="#">Сливочное</a></li>
+	  				 <li><a href="#">Щербеты</a></li>
+	  				 <li><a href="#">Фруктовый лед</a></li>
+	  				 <li><a href="#">Мелорин</a></li>
 	  				</ul>
   				</li>
   				<li><a href="#">Доставка и оплата</a></li>
-  				<li><a href="#">О компании</a></li>
+  			  <li><a href="#">О компании</a></li>
   			</ul>
-        <div class="main-header-button">
+        <div class="main-header-buttons">
     			<a href="#">Поиск</a>
     			<a href="#">Вход</a>
-    			<a href="#">Пусто</a>
+    		  <a href="#">Пусто</a>
         </div>
   		</nav>
       <div class="header-contacts">
@@ -48,7 +48,6 @@
     		</div>
     		<a class="button best-offer-button" href="#">Давайте оба!</a>
       </div>
-
   		<article class="raspberry-free">
   			<h3>Малинка даром!</h3>
   			<p>При покупке любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
@@ -119,7 +118,7 @@
   			<img src="https://via.placeholder.com/1200x430" alt="Карта сайта">
   			<aside class="contacts">
   				<h3>Как нас найти</h3>
-  				<p class="adress-name">Адрес главного офиса и офлайн-магазина:</p>
+  				<p class="address-name">Адрес главного офиса и офлайн-магазина:</p>
   				<p class="address"><b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
   				<p class="tel-name">Для заказов по телефону:</p>
   				<a class="contacts-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
