--- a/index.html
+++ b/index.html
@@ -8,156 +8,152 @@
   </head>
   <body class="page-body">
     <header class="main-header">
-     <nav class="main-navigation">
-  		<img src="img/Logo.png" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
-  			<ul class="main-menu">
-  				<li><a href="#">Каталог</a>
-  				  <ul class="sub-menu">
-	  				<li><a href="#">Новинки</a></li>
-	  				 <li><a href="#">Сливочное</a></li>
-	  				 <li><a href="#">Щербеты</a></li>
-	  				 <li><a href="#">Фруктовый лед</a></li>
-	  				 <li><a href="#">Мелорин</a></li>
-	  				</ul>
-  				</li>
-  				<li><a href="#">Доставка и оплата</a></li>
-  			  <li><a href="#">О компании</a></li>
-  			</ul>
+      <nav class="main-navigation">
+        <img src="img/Logo.png" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
+        <ul class="main-menu">
+          <li><a href="#">Каталог</a>
+            <ul class="sub-menu">
+              <li><a href="#">Новинки</a></li>
+              <li><a href="#">Сливочное</a></li>
+              <li><a href="#">Щербеты</a></li>
+              <li><a href="#">Фруктовый лед</a></li>
+              <li><a href="#">Мелорин</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Доставка и оплата</a></li>
+          <li><a href="#">О компании</a></li>
+        </ul>
         <div class="main-header-buttons">
-    			<a href="#">Поиск</a>
-    			<a href="#">Вход</a>
-    		  <a href="#">Пусто</a>
+          <a href="#">Поиск</a>
+          <a href="#">Вход</a>
+          <a href="#">Пусто</a>
         </div>
-  		</nav>
+      </nav>
       <div class="header-contacts">
-    		<p class="header-item">c 10 до 20, ежедневно</p>
-    		<a class="header-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
+        <p class="header-item">c 10 до 20, ежедневно</p>
+        <a class="header-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
       </div>
-  	</header>
-  	<main class="container">
+    </header>
+    <main class="container">
       <div class="best-offer">
         <h1>Магазин мороженого Gllacy Shop</h1>
-    		<div class="ice-cream1">
+        <div class="ice-cream1">
           <h2>Крем-брюле и пломбир с малиновым джемом</h2>
-    		</div>
-    		<div class="ice-cream2">
+        </div>
+        <div class="ice-cream2">
           <h2>Шоколадный пломбир и лимонный сорбет</h2>
-    		</div>
-    		<div class="ice-cream3">
+        </div>
+        <div class="ice-cream3">
           <h2>Пломбир с помадкой и клубничный щербет</h2>
-    		</div>
-    		<a class="button best-offer-button" href="#">Давайте оба!</a>
+        </div>
+        <a class="button best-offer-button" href="#">Давайте оба!</a>
       </div>
-  		<article class="raspberry-free">
-  			<h3>Малинка даром!</h3>
-  			<p>При покупке любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-  			<a class="button button-raspberry" href="#">Хочу варенье!</a>
-  		</article>
-  		<article class="chocolate-free">
-  			<h3>Шоколадки даром!</h3>
-  			<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-  			<a class="button" href="#">Хочу шоколадки!</a>
-  		</article>
-  		<section>
-  			<h2>Популярные вкусы</h2>
-  			<ul>
-  				<li>
-  					<section class="goods-item">
-  						<img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-  						<p class="goods-item-price">310 р/кг</p>
-  						<p class="goods-item-descriotion">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-  						<button class="button" type="button">Быстрый просмотр</button>
-  					</section>
-  				</li>
-  				<li>
-  					<section class="goods-item">
-  						<img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное с кусочками шоколада">
-  						<p class="goods-item-price">380 р/кг</p>
-  						<p class="goods-item-descriotion">Сливочно-кофейное с кусочками шоколада</p>
-  						<button class="button" type="button">Быстрый просмотр</button>
-  					</section>
-  				</li>
-  				<li>
-  					<section class="goods-item">
-  						<img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-  						<p class="goods-item-price">355 р/кг</p>
-  						<p class="goods-item-descriotion">Сливочно-клубничное с присыпкой из белого шоколада</p>
-  						<button class="button" type="button">Быстрый просмотр</button>
-  					</section>
-  				</li>
-  				<li>
-  					<section class="goods-item">
-  						<img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле с карамельной подливкой">
-  						<p class="goods-item-price">415 р/кг</p>
-  						<p class="goods-item-descriotion">Сливочное крем-брюле с карамельной подливкой</p>
-  						<button class="button" type="button">Быстрый просмотр</button>
-  					</section>
-  				</li>
-  			</ul>
-  		</section>
-  		<section class="features">
-  			<h2>Магазин Глэйси - это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-  			<ul class="features-list">
-  				<li class="feature-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-  				<li class="feature-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
-  				<li class="feature-item">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
-  				<li class="feature-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
-  			</ul>
-  		</section>
-  		<article class="news">
-  			<p>Новое в нашем блоге</p>
-  			<h2><a href="#">10 способов сервировки фруктовых щербетов к столу</a></h2>
-  		</article>
-  		<section class="mailing">
-  			<h2>Подписаться на рассылку</h2>
-  			<p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-  			<button class="button">Отправить</button>
-  		</section>
-  		<section>
-  			<h2>Мы на карте</h2>
-  			<img src="https://via.placeholder.com/1200x430" alt="Карта сайта">
-  			<aside class="contacts">
-  				<h3>Как нас найти</h3>
-  				<p class="address-name">Адрес главного офиса и офлайн-магазина:</p>
-  				<p class="address"><b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
-  				<p class="tel-name">Для заказов по телефону:</p>
-  				<a class="contacts-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
-  				<p class="opening-hours">(c 10 до 20 ежедневно)</p>
-  				<button class="button" type="button">Форма обратной связи</button>
-  			</aside>
-  			<!--Здесь будет карта сайта-->
-  		</section>
-  	</main>
-
-  	<footer class="page-footer main-footer">
-  		<section class="footer-social">
-  			<h2>Социальные сети</h2>
-  			<ul>
-  				<li>
-  					<a class="social-button" href="#">Фейсбук</a>
-  				</li>
-  				<li>
-  					<a class="social-button" href="#">Вконтакте</a>
-  				</li>
-  				<li>
-  					<a class="social-button" href="#">Инстаграм</a>
-  				</li>
-  				<li>
-  					<a class="social-button" href="#">Твиттер</a>
-  				</li>
-  			</ul>
-  		</section>
-  		<section class="footer-info">
-  			<h3>Дополнительная информация</h3>
-  			<a href="#">Для поставщиков</a>
-  			<a href="#">Наши документы</a>
-  			<a href="#">О производстве</a>
-  			<a href="#">Экологические стандарты</a>
-  		</section class="footer-copyright">
-  			<a href="#"><img src="https://via.placeholder.com/108x39" width="108" height="39" alt="HTML Academy"></a>
-  			<p>Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
-  	</footer>
-
-
+      <article class="raspberry-free">
+        <h3>Малинка даром!</h3>
+        <p>При покупке любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+        <a class="button button-raspberry" href="#">Хочу варенье!</a>
+      </article>
+      <article class="chocolate-free">
+        <h3>Шоколадки даром!</h3>
+        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <a class="button" href="#">Хочу шоколадки!</a>
+      </article>
+      <section>
+        <h2>Популярные вкусы</h2>
+        <ul>
+          <li>
+            <section class="goods-item"><img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <p class="goods-item-price">310 р/кг</p>
+              <p class="goods-item-descriotion">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+              <button class="button" type="button">Быстрый просмотр</button>
+            </section>
+          </li>
+          <li>
+            <section class="goods-item">
+              <img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное с кусочками шоколада">
+              <p class="goods-item-price">380 р/кг</p>
+              <p class="goods-item-descriotion">Сливочно-кофейное с кусочками шоколада</p>
+              <button class="button" type="button">Быстрый просмотр</button>
+            </section>
+          </li>
+          <li>
+            <section class="goods-item">
+              <img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+              <p class="goods-item-price">355 р/кг</p>
+              <p class="goods-item-descriotion">Сливочно-клубничное с присыпкой из белого шоколада</p>
+              <button class="button" type="button">Быстрый просмотр</button>
+            </section>
+          </li>
+          <li>
+            <section class="goods-item">
+              <img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле с карамельной подливкой">
+              <p class="goods-item-price">415 р/кг</p>
+              <p class="goods-item-descriotion">Сливочное крем-брюле с карамельной подливкой</p>
+              <button class="button" type="button">Быстрый просмотр</button>
+            </section>
+          </li>
+        </ul>
+      </section>
+      <section class="features">
+        <h2>Магазин Глэйси - это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+        <ul class="features-list">
+          <li class="feature-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+          <li class="feature-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+          <li class="feature-item">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+          <li class="feature-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+        </ul>
+      </section>
+      <article class="news">
+        <p>Новое в нашем блоге</p>
+        <h2><a href="#">10 способов сервировки фруктовых щербетов к столу</a></h2>
+      </article>
+      <section class="mailing">
+        <h2>Подписаться на рассылку</h2>
+        <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+        <button class="button">Отправить</button>
+      </section>
+      <section>
+        <h2>Мы на карте</h2>
+        <img src="https://via.placeholder.com/1200x430" alt="Карта сайта">
+        <aside class="contacts">
+          <h3>Как нас найти</h3>
+          <p class="address-name">Адрес главного офиса и офлайн-магазина:</p>
+          <p class="address"><b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
+          <p class="tel-name">Для заказов по телефону:</p>
+          <a class="contacts-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
+          <p class="opening-hours">(c 10 до 20 ежедневно)</p>
+          <button class="button" type="button">Форма обратной связи</button>
+        </aside>
+        <!--Здесь будет карта сайта-->
+      </section>
+    </main>
+    <footer class="page-footer main-footer">
+      <section class="footer-social">
+        <h2>Социальные сети</h2>
+        <ul>
+          <li>
+            <a class="social-button" href="#">Фейсбук</a>
+          </li>
+          <li>
+            <a class="social-button" href="#">Вконтакте</a>
+          </li>
+          <li>
+            <a class="social-button" href="#">Инстаграм</a>
+          </li>
+          <li>
+            <a class="social-button" href="#">Твиттер</a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-info">
+        <h3>Дополнительная информация</h3>
+        <a href="#">Для поставщиков</a>
+        <a href="#">Наши документы</a>
+        <a href="#">О производстве</a>
+        <a href="#">Экологические стандарты</a>
+      </section class="footer-copyright">
+      <a href="#"><img src="https://via.placeholder.com/108x39" width="108" height="39" alt="HTML Academy"></a>
+      <p>Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
+    </footer>
   </body>
 </html>
