--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
-    <link rel="stylesheet" href="css/normalize/css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
     <header class="main-header">
       <nav class="main-navigation">
-        <img src="img/Logo.png" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
+        <img src="https://via.placeholder.com/154x64" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
         <ul class="main-menu">
           <li><a href="#">Каталог</a>
             <ul class="sub-menu">
