Стилизация страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -36,120 +36,120 @@
     </header>
     <main>
       <div>
-        <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Каталог</a></li>
-          <li><a>Сливочное</a></li>
+        <ul class="breadcrumbs">
+          <li class="crumb"><a href="#">Главная</a></li>
+          <li class="crumb"><a href="#">Каталог</a></li>
+          <li class="crumb"><a>Сливочное</a></li>
         </ul>
       </div>
-      <h1>Сливочное мороженое</h1>
+      <h1 class="creamy-ice-cream">Сливочное мороженое</h1>
       <!--Здесь будет форма для фильтрации-->
       <h2>Каталог сливочного мороженого</h2>
-      <ul>
-        <li>
+      <ul class="catalog-ice-cream">
+        <li class="ice-cream-item">
           <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-          <p>310 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">310 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное с кусочками шоколада">
-          <p>380 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">380 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочно-кофейное с кусочками шоколада</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-          <p>355 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">355 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле с карамельной подливкой">
-          <p>415 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">415 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочное с брусничным джемом">
-          <p>325 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">325 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочное с брусничным джемом</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочно-черничное с цельными ягодами черники">
-          <p>410 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">410 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочно-черничное с цельными ягодами ченики</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочно-лимонное с карамельной присыпкой">
-          <p>315 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">315 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочное с шоколадной стружкой">
-          <p>320 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">320 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочное с шоколадной стружкой</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочно-ванильное с кусочками шоколада">
-          <p>440 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">440 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочно-ванильное с кусочками шоколада</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочное с ментоловым сиропом">
-          <p>435 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">435 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочное с ментоловым сиропом</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочное с кусочками черного шоколада">
-          <p>355 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">355 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочное с кусочками черного шоколада</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
         <li>
           <img src="https://via.placeholder.com/267x267" alt="Сливочное с мятным сиропом">
-          <p>420 р/кг</p>
-          <h3>
+          <p class="ice-crem-price">420 р/кг</p>
+          <h3 class="name-ice-cream-item">
             <a href="#">Сливочное с мятным сиропом</a>
           </h3>
           <button>Быстрый просмотр</button>
         </li>
       </ul>
-      <ul>
+      <ul class="pagination">
         <li><a>Предыдущая страница</a></li>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
+        <li class="pagination-item pagination-item-active"><a href="#">1</a></li>
+        <li class="pagination-item"><a href="#">2</a></li>
+        <li class="pagination-item"><a href="#">3</a></li>
+        <li class="pagination-item"><a href="#">4</a></li>
+        <li class="pagination-item"><a href="#">5</a></li>
         <li><a href="#">Следующая страница</a></li>
       </ul>
     </main>
