Стилизация каталога с учетом замечаний

--- a/catalog.html
+++ b/catalog.html
@@ -42,105 +42,51 @@
           <li class="crumb"><a>Сливочное</a></li>
         </ul>
       </div>
-      <h1 class="creamy-ice-cream">Сливочное мороженое</h1>
+      <h1 class="main-headline">Сливочное мороженое</h1>
       <!--Здесь будет форма для фильтрации-->
       <h2>Каталог сливочного мороженого</h2>
-      <ul class="catalog-ice-cream">
-        <li class="ice-cream-item">
-          <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-          <p class="ice-crem-price">310 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+      <ul>
+        <li>
+          <section class="goods-item">
+            <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            <p class="ice-crem-price">310 р/кг</p>
+            <h3 class="name-ice-cream-item">
+              <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+            </h3>
+          </section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное с кусочками шоколада">
-          <p class="ice-crem-price">380 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-          <p class="ice-crem-price">355 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле с карамельной подливкой">
-          <p class="ice-crem-price">415 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочное с брусничным джемом">
-          <p class="ice-crem-price">325 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочное с брусничным джемом</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочно-черничное с цельными ягодами черники">
-          <p class="ice-crem-price">410 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочно-черничное с цельными ягодами ченики</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочно-лимонное с карамельной присыпкой">
-          <p class="ice-crem-price">315 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочное с шоколадной стружкой">
-          <p class="ice-crem-price">320 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочное с шоколадной стружкой</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочно-ванильное с кусочками шоколада">
-          <p class="ice-crem-price">440 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочно-ванильное с кусочками шоколада</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочное с ментоловым сиропом">
-          <p class="ice-crem-price">435 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочное с ментоловым сиропом</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочное с кусочками черного шоколада">
-          <p class="ice-crem-price">355 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочное с кусочками черного шоколада</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
         <li>
-          <img src="https://via.placeholder.com/267x267" alt="Сливочное с мятным сиропом">
-          <p class="ice-crem-price">420 р/кг</p>
-          <h3 class="name-ice-cream-item">
-            <a href="#">Сливочное с мятным сиропом</a>
-          </h3>
-          <button>Быстрый просмотр</button>
+          <section></section>
         </li>
       </ul>
       <ul class="pagination">
