--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <main class="container">
       <div class="best-offer">
         <h1>Магазин мороженого Gllacy Shop</h1>
-        <div class="ice-cream1">
+        <div class="ice-cream">
           <h2>Крем-брюле и пломбир с малиновым джемом</h2>
         </div>
-        <div class="ice-cream2">
+        <div class="ice-cream">
           <h2>Шоколадный пломбир и лимонный сорбет</h2>
         </div>
-        <div class="ice-cream3">
+        <div class="ice-cream">
           <h2>Пломбир с помадкой и клубничный щербет</h2>
         </div>
         <a class="button best-offer-button" href="#">Давайте оба!</a>
@@ -62,9 +62,10 @@
         <h2>Популярные вкусы</h2>
         <ul>
           <li>
-            <section class="goods-item"><img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            <section class="goods-item">
+              <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               <p class="goods-item-price">310 р/кг</p>
-              <p class="goods-item-descriotion">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+              <p class="goods-item-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
               <button class="button" type="button">Быстрый просмотр</button>
             </section>
           </li>
