Стилизация внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body class="page-body">
     <header class="main-header">
       <nav class="main-navigation">
-        <img src="https://via.placeholder.com/154x64" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
+        <img src="img/logo.svg" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
         <ul class="main-menu">
           <li><a href="#">Каталог</a>
             <ul class="sub-menu">
@@ -45,58 +45,136 @@
       <h1 class="main-headline">Сливочное мороженое</h1>
       <!--Здесь будет форма для фильтрации-->
       <h2>Каталог сливочного мороженого</h2>
-      <ul>
+      <ul class="goods">
         <li>
           <section class="goods-item">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-            <p class="ice-crem-price">310 р/кг</p>
-            <h3 class="name-ice-cream-item">
+            <img src="img/01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            <p class="goods-item-price">310 р/кг</p>
+            <h3 class="goods-item-description">
               <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
             </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
           </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+            <p class="goods-item-price">380 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+            <p class="goods-item-price">355 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+            <p class="goods-item-price">415 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/05.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
+            <p class="goods-item-price">325 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочное с брусничным джемом</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/06.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+            <p class="goods-item-price">410 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочно-черничное с цельными ягодами черники</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/07.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+            <p class="goods-item-price">315 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/08.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+            <p class="goods-item-price">320 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочное с шоколадной стружкой</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/09.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+            <p class="goods-item-price">440 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочно-ванильное с кусочками шоколада</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
+            <p class="goods-item-price">435 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочное с ментоловым сиропом</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+            <p class="goods-item-price">355 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочное с кусочками черного шоколада</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
         <li>
-          <section></section>
+          <section class="goods-item">
+            <img src="img/12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
+            <p class="goods-item-price">420 р/кг</p>
+            <h3 class="goods-item-description">
+              <a href="#">Сливочное с мятным сиропом</a>
+            </h3>
+            <button class="button" type="button">Быстрый просмотр</button>
+          </section>
         </li>
       </ul>
       <ul class="pagination">
-        <li><a>Предыдущая страница</a></li>
+        <li class="pagination-arrow pagination-arrow-prev"><a>Предыдущая страница</a></li>
         <li class="pagination-item pagination-item-active"><a href="#">1</a></li>
         <li class="pagination-item"><a href="#">2</a></li>
         <li class="pagination-item"><a href="#">3</a></li>
         <li class="pagination-item"><a href="#">4</a></li>
         <li class="pagination-item"><a href="#">5</a></li>
-        <li><a href="#">Следующая страница</a></li>
+        <li class="pagination-arrow pagination-arrow-next"><a href="#">Следующая страница</a></li>
       </ul>
     </main>
     <footer class="main-footer">
@@ -124,7 +202,7 @@
         <a href="#">О производстве</a>
         <a href="#">Экологические стандарты</a>
       </section>
-      <a href="#"><img src="https://via.placeholder.com/108x39" width="108" height="39" alt="HTML Academy"></a>
+      <a href="#"><img src="img/logo_htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
       <p>Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
     </footer>
   </body>
