--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="page-body">
     <header class="main-header">
       <nav class="main-navigation">
-        <img src="https://via.placeholder.com/154x64" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
+        <img src="img/logo.svg" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
         <ul class="main-menu">
           <li><a href="#">Каталог</a>
             <ul class="sub-menu">
@@ -36,15 +36,21 @@
     </header>
     <main class="container">
       <div class="best-offer">
-        <h1>Магазин мороженого Gllacy Shop</h1>
+        <h1 class="main-headline">Магазин мороженого Gllacy Shop</h1>
         <div class="ice-cream">
           <h2>Крем-брюле и пломбир с малиновым джемом</h2>
+          <img src="img/ice-cream1.png" width="372" height="584" alt="Крем-брюле">
+          <img src="img/ice-cream2.png" width="333" height="519" alt="Пломбир с малиновым джемом">
         </div>
         <div class="ice-cream">
           <h2>Шоколадный пломбир и лимонный сорбет</h2>
+          <img src="img/choco-ice.png" width="375" height="582" alt="Шоколадный пломбир">
+          <img src="img/lemon-ice.png" width="338" height="523" alt="Лимонный сорбет">
         </div>
         <div class="ice-cream">
           <h2>Пломбир с помадкой и клубничный щербет</h2>
+          <img src="img/choco-gravy.png" width="367" height="582" alt="Пломбир с помадкой">
+          <img src="img/strawberry-ice.png" width="326" height="523" alt="Клубничный щербет">
         </div>
         <a class="button best-offer-button" href="#">Давайте оба!</a>
       </div>
@@ -60,36 +66,44 @@
       </article>
       <section>
         <h2>Популярные вкусы</h2>
-        <ul>
+        <ul class="goods">
           <li>
             <section class="goods-item">
-              <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <img src="img/01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               <p class="goods-item-price">310 р/кг</p>
-              <p class="goods-item-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+              <h3 class="goods-item-description">
+                <a>Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+              </h3>
               <button class="button" type="button">Быстрый просмотр</button>
             </section>
           </li>
           <li>
             <section class="goods-item">
-              <img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное с кусочками шоколада">
+              <img src="img/02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               <p class="goods-item-price">380 р/кг</p>
-              <p class="goods-item-descriotion">Сливочно-кофейное с кусочками шоколада</p>
+              <h3 class="goods-item-description">
+                <a>Сливочно-кофейное с кусочками шоколада</a>
+              </h3>
               <button class="button" type="button">Быстрый просмотр</button>
             </section>
           </li>
           <li>
             <section class="goods-item">
-              <img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+              <img src="img/03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               <p class="goods-item-price">355 р/кг</p>
-              <p class="goods-item-descriotion">Сливочно-клубничное с присыпкой из белого шоколада</p>
+              <h3 class="goods-item-description">
+                <a>Сливочно-клубничное с присыпкой из белого шоколада</a>
+              </h3>
               <button class="button" type="button">Быстрый просмотр</button>
             </section>
           </li>
           <li>
             <section class="goods-item">
-              <img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле с карамельной подливкой">
+              <img src="img/04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               <p class="goods-item-price">415 р/кг</p>
-              <p class="goods-item-descriotion">Сливочное крем-брюле с карамельной подливкой</p>
+              <h3 class="goods-item-description">
+                <a>Сливочное крем-брюле с карамельной подливкой</a>
+              </h3>
               <button class="button" type="button">Быстрый просмотр</button>
             </section>
           </li>
@@ -152,9 +166,9 @@
         <a href="#">Наши документы</a>
         <a href="#">О производстве</a>
         <a href="#">Экологические стандарты</a>
-      </section class="footer-copyright">
-      <a href="#"><img src="https://via.placeholder.com/108x39" width="108" height="39" alt="HTML Academy"></a>
-      <p>Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
+      </section>
+      <a href="#"><img src="img/logo_htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
+      <p class="footer-copyright">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
     </footer>
   </body>
 </html>
