Стилизация внутренней страницы с учетом правок

--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
           <section class="goods-item">
             <img src="img/01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
             <p class="goods-item-price">310 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -60,7 +60,7 @@
           <section class="goods-item">
             <img src="img/02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
             <p class="goods-item-price">380 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочно-кофейное с кусочками шоколада</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -70,7 +70,7 @@
           <section class="goods-item">
             <img src="img/03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
             <p class="goods-item-price">355 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -80,7 +80,7 @@
           <section class="goods-item">
             <img src="img/04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
             <p class="goods-item-price">415 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -90,7 +90,7 @@
           <section class="goods-item">
             <img src="img/05.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
             <p class="goods-item-price">325 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочное с брусничным джемом</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -100,7 +100,7 @@
           <section class="goods-item">
             <img src="img/06.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
             <p class="goods-item-price">410 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочно-черничное с цельными ягодами черники</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -110,7 +110,7 @@
           <section class="goods-item">
             <img src="img/07.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
             <p class="goods-item-price">315 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -120,7 +120,7 @@
           <section class="goods-item">
             <img src="img/08.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
             <p class="goods-item-price">320 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочное с шоколадной стружкой</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -130,7 +130,7 @@
           <section class="goods-item">
             <img src="img/09.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
             <p class="goods-item-price">440 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочно-ванильное с кусочками шоколада</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -140,7 +140,7 @@
           <section class="goods-item">
             <img src="img/10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
             <p class="goods-item-price">435 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочное с ментоловым сиропом</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -150,7 +150,7 @@
           <section class="goods-item">
             <img src="img/11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
             <p class="goods-item-price">355 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочное с кусочками черного шоколада</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
@@ -160,7 +160,7 @@
           <section class="goods-item">
             <img src="img/12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
             <p class="goods-item-price">420 р/кг</p>
-            <h3 class="goods-item-description">
+            <h3 class="goods-item-name">
               <a href="#">Сливочное с мятным сиропом</a>
             </h3>
             <button class="button" type="button">Быстрый просмотр</button>
