--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <section class="goods-item">
               <img src="img/01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               <p class="goods-item-price">310 р/кг</p>
-              <h3 class="goods-item-description">
+              <h3 class="goods-item-name">
                 <a>Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
               </h3>
               <button class="button" type="button">Быстрый просмотр</button>
@@ -81,7 +81,7 @@
             <section class="goods-item">
               <img src="img/02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               <p class="goods-item-price">380 р/кг</p>
-              <h3 class="goods-item-description">
+              <h3 class="goods-item-name">
                 <a>Сливочно-кофейное с кусочками шоколада</a>
               </h3>
               <button class="button" type="button">Быстрый просмотр</button>
@@ -91,7 +91,7 @@
             <section class="goods-item">
               <img src="img/03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               <p class="goods-item-price">355 р/кг</p>
-              <h3 class="goods-item-description">
+              <h3 class="goods-item-name">
                 <a>Сливочно-клубничное с присыпкой из белого шоколада</a>
               </h3>
               <button class="button" type="button">Быстрый просмотр</button>
@@ -101,7 +101,7 @@
             <section class="goods-item">
               <img src="img/04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               <p class="goods-item-price">415 р/кг</p>
-              <h3 class="goods-item-description">
+              <h3 class="goods-item-name">
                 <a>Сливочное крем-брюле с карамельной подливкой</a>
               </h3>
               <button class="button" type="button">Быстрый просмотр</button>
