Графика всех страниц с учетом правок

--- a/index.html
+++ b/index.html
@@ -39,18 +39,15 @@
         <h1 class="main-headline">Магазин мороженого Gllacy Shop</h1>
         <div class="ice-cream">
           <h2>Крем-брюле и пломбир с малиновым джемом</h2>
-          <img src="img/ice-cream1.png" width="372" height="584" alt="Крем-брюле">
-          <img src="img/ice-cream2.png" width="333" height="519" alt="Пломбир с малиновым джемом">
+          <img src="img/pair-icecream01.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом">
         </div>
         <div class="ice-cream">
           <h2>Шоколадный пломбир и лимонный сорбет</h2>
-          <img src="img/choco-ice.png" width="375" height="582" alt="Шоколадный пломбир">
-          <img src="img/lemon-ice.png" width="338" height="523" alt="Лимонный сорбет">
+          <img src="img/pair-icecream02.png" width="644" height="582" alt="Шоколадный пломбир и лимонный сорбет">
         </div>
         <div class="ice-cream">
           <h2>Пломбир с помадкой и клубничный щербет</h2>
-          <img src="img/choco-gravy.png" width="367" height="582" alt="Пломбир с помадкой">
-          <img src="img/strawberry-ice.png" width="326" height="523" alt="Клубничный щербет">
+          <img src="img/pair-icecream03.png" width="639" height="582" alt="Пломбир с помадкой и клубничный щербет">
         </div>
         <a class="button best-offer-button" href="#">Давайте оба!</a>
       </div>
@@ -69,7 +66,7 @@
         <ul class="goods">
           <li>
             <section class="goods-item">
-              <img src="img/01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <img src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               <p class="goods-item-price">310 р/кг</p>
               <h3 class="goods-item-name">
                 <a>Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -79,7 +76,7 @@
           </li>
           <li>
             <section class="goods-item">
-              <img src="img/02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+              <img src="img/product02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               <p class="goods-item-price">380 р/кг</p>
               <h3 class="goods-item-name">
                 <a>Сливочно-кофейное с кусочками шоколада</a>
@@ -89,7 +86,7 @@
           </li>
           <li>
             <section class="goods-item">
-              <img src="img/03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+              <img src="img/product03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               <p class="goods-item-price">355 р/кг</p>
               <h3 class="goods-item-name">
                 <a>Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -99,7 +96,7 @@
           </li>
           <li>
             <section class="goods-item">
-              <img src="img/04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+              <img src="img/product04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               <p class="goods-item-price">415 р/кг</p>
               <h3 class="goods-item-name">
                 <a>Сливочное крем-брюле с карамельной подливкой</a>
