--- a/catalog.html
+++ b/catalog.html
@@ -48,7 +48,7 @@
       <ul class="goods">
         <li>
           <section class="goods-item">
-            <img src="img/01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            <img src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
             <p class="goods-item-price">310 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -58,7 +58,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+            <img src="img/product02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
             <p class="goods-item-price">380 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочно-кофейное с кусочками шоколада</a>
@@ -68,7 +68,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+            <img src="img/product03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
             <p class="goods-item-price">355 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -78,7 +78,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+            <img src="img/product04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
             <p class="goods-item-price">415 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
@@ -88,7 +88,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/05.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
+            <img src="img/product05.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
             <p class="goods-item-price">325 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочное с брусничным джемом</a>
@@ -98,7 +98,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/06.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+            <img src="img/product06.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
             <p class="goods-item-price">410 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочно-черничное с цельными ягодами черники</a>
@@ -108,7 +108,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/07.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+            <img src="img/product07.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
             <p class="goods-item-price">315 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
@@ -118,7 +118,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/08.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+            <img src="img/product08.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
             <p class="goods-item-price">320 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочное с шоколадной стружкой</a>
@@ -128,7 +128,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/09.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+            <img src="img/product09.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
             <p class="goods-item-price">440 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочно-ванильное с кусочками шоколада</a>
@@ -138,7 +138,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
+            <img src="img/product10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
             <p class="goods-item-price">435 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочное с ментоловым сиропом</a>
@@ -148,7 +148,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+            <img src="img/product11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
             <p class="goods-item-price">355 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочное с кусочками черного шоколада</a>
@@ -158,7 +158,7 @@
         </li>
         <li>
           <section class="goods-item">
-            <img src="img/12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
+            <img src="img/product12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
             <p class="goods-item-price">420 р/кг</p>
             <h3 class="goods-item-name">
               <a href="#">Сливочное с мятным сиропом</a>
